--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,28 @@
 spring:
-  profiles:
-    active: local # default profile
-    group:
-      local:
-        - common
-      prod:
-        - common
-
----
-spring:
-  config:
-    activate:
-      on-profile: common
+  datasource:
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    open-in-view: false
+    defer-datasource-initialization: true
+    hibernate.ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate.format_sql: true
+      hibernate.default_batch_fetch_size: 100
+  sql.init.mode: always
 
 kakao:
   rest:
     api:
       key: ${KAKAO_REST_API_KEY}
+
+---
+
+spring:
+  config.activate.on-profile: test
+  datasource.url: jdbc:h2:mem:testdb
+  datasource:
+    driver-class-name: org.h2.Driver
